# learn-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notes/: building-conversations.md  llm-internals.md  machine-learning-basics.md  prompt-engineering.md  tool-calls.md
practice/: __init__.py  api_client.py  learn-conversations.py  learn-roles.py  learn-sentiment-classification.py  learn-temperatures.py  learn_conversations.py  learn_roles.py  learn_sentiment_classification.py  learn_temperatures.py
